<resources>
    <string name="app_name">s328084s333761Mappe3</string>
    <string name="title_activity_maps">Map</string>
    <string name="velgDato">Velg dato</string>
    <string name="velgTidspunkt">Velg tidspunkt</string>
    <string name="leggTilRomReservasjon">Ny romreservasjon</string>
    <string name="leggTilRom">Nytt rom</string>
    <string name="leggTilBygg">Nytt bygg</string>
    <string name="etasjeNrInn">Skriv inn etasjen til rommet</string>
    <string name="romNrInn">Velg romnummer</string>
    <string name="kapasitetInn">Skriv inn kapasiteten til rommet</string>
    <string name="romBeskrivelseInn">Skriv inn rombeskrivelse</string>
    <string name="antEtasjerInn">Skriv inn antall etasjer</string>
    <string name="adresseInn">Skriv inn adresse</string>
    <string name="koordinaterInn">Skriv inn koordinatene til bygget</string>
    <string name="byggBeskrivelseInn">Skriv inn byggbeskrivelse</string>
    <string name="ikkeFyltUtKorrekt">må fylles ut korrekt</string>
    <string name="feilBeskrivelse">beskrivelse</string>
    <string name="feilAntEtasjer">antall etasjer</string>
    <string name="feilRomNr">romNr</string>
    <string name="feilEtasjeNr">etasjeNr</string>
    <string name="feilKapasitet">kapasitet</string>
    <string name="feilDato">dato</string>
    <string name="feilTid">tid</string>
    <string name="adresse">adresse</string>
    <string name="koordinater">koordinater</string>
    <string name="rom">Rom</string>
    <string name="reservasjoner">Reservasjoner</string>
    <string name="avslutt">Avslutt</string>
    <string name="byggUt">ByggUt</string>
    <string name="romUt">RomUt</string>
    <string name="reservasjonUt">ReservasjonUt</string>
    <string name="ikkeAdresse">Lokasjonen har ingen adresse</string>
    <string name="visRom">Vis rom</string>
    <string name="bygg_id">bygg_id</string>
    <string name="bygg_etasjer">bygg_etasjer</string>
    <string name="bygg_koordinater">bygg_koordinater</string>
    <string name="bygg_beskrivelse">bygg_beskrivelse</string>
    <string name="antallMarkers">antallMarkers</string>
    <string name="romNr">romNr</string>
    <string name="romKapasitet">romKapasitet</string>
    <string name="romEtasje">romEtasje</string>
    <string name="romBeskrivelse">rombeskrivelse</string>
    <string name="tidspunktFra">tidspunktFra</string>
    <string name="etasjeNr">Etasje Nr: </string>
    <string name="RomNr">Rom Nr: </string>
    <string name="kapasitet">Kapasitet: </string>
    <string name="antall_etasjer">Etasjer: </string>
    <string name="dato_felt">Dato:</string>
    <string name="tid_fra_felt">Starttidspunkt:</string>
    <string name="tif_til_felt">Slutttidspunkt:</string>
    <string name="fraTil">start må være før slutt</string>
    <string name="opptatt">Allerede booket i dette tidsrommet</string>
    <string name="kapasitet_feil">Kapasitet må være et heltall større enn 0. </string>
    <string name="etasjenr_feil">EtasjeNr må være et heltall mellom 1 og 20 og må være en av byggets etasjer. </string>
    <string name="antetasjer_feil">Antall etasjer må være et heltall mellom 1 og 20. </string>
    <string name="serverFeil">Klarte ikke hente fra server</string>
</resources>