<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sett inn bygg her" />

    <TextView
        android:id="@+id/koordinater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rom" />
    <TextView
    android:id="@+id/antEtasjer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/reservasjoner" />

    <TextView
        android:id="@+id/beskrivelse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/leggTilRomKnapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visRom" />


    <Button
        android:id="@+id/avsluttKnapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avslutt" />
</LinearLayout>