<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/RomNr"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/romNrBoks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:textSize="20sp"/>
        </LinearLayout>



        <ImageButton
            android:id="@+id/dato"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:onClick="visDato"
            android:src="@android:drawable/ic_menu_day"
            android:tint="@color/black"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dato_felt"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/datoBoks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/fraTidspunkt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:onClick="visTidspunktFra"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_recent_history"
            android:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tid_fra_felt"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fraTidBoks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/tilTidspunkt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:onClick="visTidspunkt"
            android:src="@android:drawable/ic_menu_recent_history"
            android:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tif_til_felt"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tilTidBoks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>